--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "splix.io but you have to ride your bike",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --watch",
     "start": "node index.js"
   },
   "repository": {
@@ -22,6 +22,9 @@
     "dotenv": "^6.0.0",
     "fastify": "^1.12.1",
     "pg": "^7.4.3",
-    "strava-v3": "^1.14.0"
+    "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
