--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "strava-splix",
   "version": "1.0.0",
   "description": "splix.io but you have to ride your bike",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "jest --watch",
-    "start": "node index.js"
+    "start": "node lib/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,6 @@
   },
   "homepage": "https://github.com/overwatchcorp/strava-splix#readme",
   "dependencies": {
-    "@mapbox/polyline": "^1.0.0",
-    "dotenv": "^6.0.0",
-    "fastify": "^1.12.1",
-    "pg": "^7.4.3",
-    "request": "^2.88.0"
   },
   "devDependencies": {
     "jest": "^23.6.0"
